--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-langgraph
-tavily-python
-langchain-google-genai
-python-docx
-matplotlib
+langgraph==0.0.33
+tavily-python==0.3.3
+langchain-google-genai==0.0.13
+langchain-core==0.1.0
+python-docx==1.1.0
+matplotlib==3.8.4
+seaborn==0.13.2
+typing-extensions==4.11.0
